--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -6,10 +6,16 @@
       <span><%= humanized_money_with_symbol product.price %></span>
     </h1>
   <% end%>
+
   <div>
-    <%= button_to add_item_cart_path(product_id: product.id), class: 'btn' ,
+  <% if product.quantity == 0 %>
+  <button type="button" class="soldout">Sold out</button>
+  <% end %>
+
+    <%= button_to add_item_cart_path(product_id: product.id), :disabled => product.quantity == 0, class: 'btn' ,
     method: :post do %>
       <%= fa_icon "shopping-cart", text: 'Add' %> 
     <% end %>
   </div>
+
 </article>
