--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -9,7 +9,7 @@
 
   <div>
   <% if product.quantity == 0 %>
-  <button type="button" class="soldout">Sold out</button>
+  <h3><span class="soldout">Sold out</span></h3>
   <% end %>
 
     <%= button_to add_item_cart_path(product_id: product.id), :disabled => product.quantity == 0, class: 'btn' ,
