--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -19,8 +19,8 @@
         </tr>
       </thead>
       <tbody>
-        <% enhanced_cart.each do |item| %>
-          <%= render 'item', product: item[:product], quantity: item[:quantity].to_i %>
+        <% @order_line_items.each do |line_item| %>
+          <%= render 'item', item: line_item %>
         <% end %>
       </tbody>
       <tfoot>
@@ -29,7 +29,7 @@
             TOTAL:
           </th>
           <th>
-            <%= humanized_money_with_symbol cart_subtotal_cents / 100.0 %>
+            <%= humanized_money_with_symbol @order.total_cents / 100.0 %>
           </th>
         </tr>
       </tfoot>
