--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,2 +1,22 @@
-<h1>Admin::Dashboard#show</h1>
-<p>Find me in app/views/admin/dashboard/show.html.erb</p>
+<section class="admin-products-dashboard">
+
+  <header class="page-header">
+    <h1>Admin &raquo; Dashboard</h1>
+  </header>
+
+  <table class="table table-bordered">
+    <thead>
+      <tr>
+        <th>Total <%= link_to "Products", "/admin/products" %></th>
+        <th>Total Categories (<%= link_to "Evergreens", "/categories/1" %>, <%= link_to "Shrubs", "/categories/2" %>, <%= link_to "Trees", "/categories/3" %>)</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+      <td><%= @totalproducts %></td>
+      <td><%= @totalcategories %></td>
+      </tr>
+    </tbody>
+  </table>
+
+</section>
