--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -43,7 +43,8 @@
         </li> %>
       </ul>
       <ul class="navbar-nav">
-        <li class="nav-item dropdown">
+      <li class="nav-item"><%= link_to 'About Us', '/about', class: "nav-link" %></li>
+      <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle text-danger"
             href="#"
