--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -43,7 +43,7 @@
         </li> %>
       </ul>
       <ul class="navbar-nav">
-      <li class="nav-item"><%= link_to 'About Us', '/about', class: "nav-link" %></li>
+      <li class="nav-item"><%= link_to 'About Us', [:about, :index], class: "nav-link" %></li>
       <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle text-danger"
@@ -58,6 +58,7 @@
           <ul class="dropdown-menu dropdown-menu-dark">
             <li><%= link_to 'Dashboard', [:admin, :root], class: "nav-link" %></li>
             <li><%= link_to 'Products', [:admin, :products], class: "nav-link" %></li>
+            <li><%= link_to 'Categories', [:admin, :categories], class: "nav-link" %></li>
           </ul>
         </li>
         <li class="nav-item end-0">
