--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -111,3 +111,8 @@ form.button_to {
 .text-danger {
   color: #f38792 !important;
 }
+
+#nav-text {
+  color: rgba(255, 255, 255, 0.55);
+  padding: 0.5rem 1rem;
+}
