--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -34,6 +34,7 @@
             <%# Categories %>
           <%# </a>
           <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDropdown"> %>
+          <li class="nav-item"><%= link_to 'About Us', [:about, :index], class: "nav-link" %></li>
             <% Category.all.each do |category| %>
             <li class="nav-item">
               <%= link_to category.name, category, class: "nav-link" %>
@@ -43,7 +44,13 @@
         </li> %>
       </ul>
       <ul class="navbar-nav">
-      <li class="nav-item"><%= link_to 'About Us', [:about, :index], class: "nav-link" %></li>
+      <% if current_user %>
+      <li id="nav-text"> Welcome back, <%= current_user.name %>!</li>
+      <li class="nav-item"><%= link_to "Logout", '/logout', class: "nav-link" %></li>
+      <% else %>
+      <li class="nav-item"><%= link_to 'Login', '/login', class: "nav-link" %></li>
+      <li class="nav-item"><%= link_to 'Sign Up', '/signup', class: "nav-link" %></li>
+      <% end %>
       <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle text-danger"
