--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,14 +1,21 @@
-
 <header class="page-header">
   <h1>Jungle &raquo; Signup</h1>
 </header>
 
-<%= form_for :user, url: '/users' do |f| %>
-
-  Name: <%= f.text_field :name %>
-  Email: <%= f.text_field :email %>
-  Password: <%= f.password_field :password %>
-  Password Confirmation: <%= f.password_field :password_confirmation %>
-  <%= f.submit "Submit" %>
-
-<% end %>
+<div class="row">
+  <div class="col-sm-6 col-sm-offset-1">
+    <%= form_for :user, url: '/users' do |form| %>
+      <div class="form-group">
+        <%= form.label :name %>
+        <%= form.text_field :name, class: 'form-control' %>
+        <%= form.label :email %>
+        <%= form.text_field :email, class: 'form-control' %>
+        <%= form.label :password %>
+        <%= form.text_field :password, class: 'form-control' %>
+        <%= form.label :password_field %>
+        <%= form.text_field :password_confirmation, class: 'form-control' %>
+        <%= form.submit "Submit" %>
+        <% end %>
+      </div>
+  </div>
+</div>
