--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -45,7 +45,7 @@
       </ul>
       <ul class="navbar-nav">
       <% if current_user %>
-      <li id="nav-text"> Welcome back, <%= current_user.name %>!</li>
+      <li id="nav-text"> Welcome back, <%= current_user.first_name %>!</li>
       <li class="nav-item"><%= link_to "Logout", '/logout', class: "nav-link" %></li>
       <% else %>
       <li class="nav-item"><%= link_to 'Login', '/login', class: "nav-link" %></li>
