--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,8 +6,10 @@
   <div class="col-sm-6 col-sm-offset-1">
     <%= form_for :user, url: '/users' do |form| %>
       <div class="form-group">
-        <%= form.label :name %>
-        <%= form.text_field :name, class: 'form-control' %>
+        <%= form.label :first_name %>
+        <%= form.text_field :first_name, class: 'form-control' %>
+        <%= form.label :last_name %>
+        <%= form.text_field :last_name, class: 'form-control' %>
         <%= form.label :email %>
         <%= form.text_field :email, class: 'form-control' %>
         <%= form.label :password %>
